--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
       rel="stylesheet"
     />
-    <title>Keeper App</title>
+    <title>Notes Keeper App</title>
   </head>
   <body>
     <div id="root"></div>
